--- a/ScannerParsing.vcxproj.filters
+++ b/ScannerParsing.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="FileScan\FileScan.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Common\io_utility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common\constants.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileScan\FileScan.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\io_utility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
